Se agrego animacion

--- a/css/templatemo_style.css
+++ b/css/templatemo_style.css
@@ -493,6 +493,14 @@ hr {
   border-bottom: 1px solid #444444;
   display: inline-block;
 }
+.heading-section h3 {
+  font-size: 28px;
+  font-weight: 600;
+  text-transform: uppercase;
+  border-bottom: 1px solid #444444;
+  display: inline-block;
+}
+
 .heading-section p {
   color: #444444;
   font-size: 16px;
